<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".ui.main.MainAuthorizationFragment">

    <Button
        android:id="@+id/btn_registration"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btn_registration_title"
        android:textAllCaps="false"
        android:textSize="@dimen/text_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_login"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btn_login_title"
        android:textAllCaps="false"
        android:textSize="@dimen/text_24"
        app:layout_constraintBottom_toTopOf="@+id/btn_registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_push"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:text="@string/check_box_push_title"
        android:textSize="@dimen/text_13"
        app:layout_constraintStart_toStartOf="@+id/btn_registration"
        app:layout_constraintTop_toBottomOf="@+id/btn_registration" />

    <CheckBox
        android:id="@+id/checkBox_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_box_location_title"
        android:textSize="@dimen/text_13"
        app:layout_constraintStart_toStartOf="@+id/checkBox_push"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_push" />

</androidx.constraintlayout.widget.ConstraintLayout>