<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.entercode.EnterCodeFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/enter_fragment_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.27" />

        <TextView
            android:id="@+id/entry_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry_code_title"
            android:textSize="@dimen/text_36"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/enter_fragment_guideline" />

        <TextView
            android:id="@+id/textView_sms_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/textView_sms_title"
            android:textSize="@dimen/text_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry_code" />

        <TextView
            android:id="@+id/textView_sms_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_sms_description"
            android:textSize="@dimen/text_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_sms_title" />

        <TextView
            android:id="@+id/textView_new_code_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_weight="1"
            android:text="@string/textView_new_code_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_code_group" />

        <TextView
            android:id="@+id/textView_new_code_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_new_code_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_new_code_title" />

        <LinearLayout
            android:id="@+id/linearLayout_code_group"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_40"
            android:layout_marginTop="@dimen/margin_20"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_sms_description">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText_one"
                    android:layout_width="@dimen/width_32"
                    android:layout_height="match_parent"
                    android:autofillHints="no"
                    android:background="@null"
                    android:digits="1234567890"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="numberSigned"
                    android:maxLength="1"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText_two"
                    android:layout_width="@dimen/width_32"
                    android:layout_height="match_parent"
                    android:autofillHints="no"
                    android:background="@null"
                    android:digits="1234567890"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="numberSigned"
                    android:maxLength="1"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText_three"
                    android:layout_width="@dimen/width_32"
                    android:layout_height="match_parent"
                    android:autofillHints="no"
                    android:background="@null"
                    android:digits="1234567890"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="numberSigned"
                    android:maxLength="1"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText_four"
                    android:layout_width="@dimen/width_32"
                    android:layout_height="match_parent"
                    android:autofillHints="no"
                    android:background="@null"
                    android:digits="1234567890"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="numberSigned"
                    android:maxLength="1"
                    tools:ignore="LabelFor" />
            </LinearLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>