<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:padding="15dp"
    tools:context=".ui.authorization.AuthorizationFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/auth_fragment_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <TextView
        android:id="@+id/btn_enter_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_enter_phone_title"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/auth_fragment_guideline" />

    <TextView
        android:id="@+id/enter_phone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_phone_title"
        app:layout_constraintStart_toStartOf="@+id/btn_enter_phone"
        app:layout_constraintTop_toBottomOf="@+id/btn_enter_phone" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/rectangle"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/enter_phone_title"
        app:layout_constraintTop_toBottomOf="@+id/enter_phone_title">

        <Spinner
            android:id="@+id/spinner_number_prefix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:entries="@array/numberPrefix" />

        <EditText
            android:id="@+id/edit_text_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:ems="10"
            android:inputType="phone"
            android:autofillHints="no" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_get_code"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_get_code_title"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView_terms_of_use"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/terms_of_use_ешеду"
        android:textColor="#80FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_sing_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_get_code" />

</androidx.constraintlayout.widget.ConstraintLayout>